# Distributed-Illumination-Control-System

./: ..gitignore.un~  .gitignore  .logger.py.un~  .plot.py.un~  README.md  logger.py  plot.py
build-interface-Qt_6_6_2_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja
build-interface-Qt_6_6_2_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-interface-Qt_6_6_2_for_macOS-Debug/interface.app/Contents/: Info.plist
build-interface-Qt_6_6_2_for_macOS-Debug/interface_autogen/: deps  mocs_compilation.cpp
build-interface-Qt_6_6_2_for_macOS-Debug/interface_autogen/EWIEGA46WW/: moc_TcpClient.cpp  moc_TcpClient.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-interface-Qt_6_6_2_for_macOS-Debug/interface_autogen/include/: ui_mainwindow.h
interface/: CMakeLists.txt  TcpClient.cpp  TcpClient.hpp  UdpClient.cpp  UdpClient.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
logs/: DC.npy  DutyCycle.npy  LUX.npy  Luminosity.npy  TIME.npy  ct.npy  cu.npy  cy1.npy  cy2.npy  dt:.npy  lux.npy  measured.npy  plot.py  t.npy  target.npy  u.npy
scdtr/: command.cpp  command.hpp  command_fifo.cpp  command_fifo.hpp  communication.cpp  communication.hpp  controller.cpp  controller.hpp  led.cpp  led.hpp  luxmeter.cpp  luxmeter.hpp  mcp2515.cpp  scdtr.ino  thread_safe_fifo.cpp  thread_safe_fifo.hpp
scdtr/include/: command.hpp  command_fifo.hpp  communication.hpp  controller.hpp  led.hpp  luxmeter.hpp  mcp2515.hpp  ring_buffer.hpp  thread_safe_fifo.hpp
server/: CMakeLists.txt  server.cpp
utils/: x.py
utils/logs/: d_cmd_h.npy  dc.npy
(+19 files in other folders)
